crates/alien-helm/tests/generator/snapshots/generator__generator__helpers__data_layer.snap
---
source: crates/alien-helm/tests/generator/helpers.rs
expression: buf
---
=== Chart.yaml ===
apiVersion: v2
name: data-chart
description: Deployment chart for data-chart
type: application
version: 0.1.0
appVersion: "0.1.0"

=== values.yaml ===
management:
  token: ""
  name: ""
  url: ""
  deploymentId: "dep_replace_me"
  updates: auto
  telemetry: auto
  healthChecks: "on"

runtime:
  image:
    repository: ghcr.io/alienplatform/alien-agent
    tag: latest
    pullPolicy: IfNotPresent
  # Optional 64-character hex key. If empty, Helm generates one at install time.
  encryptionKey: ""
  replicas: 1
  resources:
    requests:
      cpu: 100m
      memory: 128Mi
    limits:
      memory: 512Mi
  api:
    enabled: false
    port: 8080
    service:
      type: ClusterIP

serviceAccounts:
  {}

stackSettings: null

infrastructure: null

services:
  {}

publicUrls: {}

persistentStorage:
  storageClassName: ""

ephemeralStorage:
  nodeSelector: {}

=== values.schema.json ===
{
  "$schema": "https://json-schema.org/draft-07/schema#",
  "type": "object",
  "additionalProperties": false,
  "properties": {
    "management": {
      "type": "object",
      "additionalProperties": false,
      "required": ["token", "updates", "telemetry", "healthChecks"],
      "properties": {
        "token": { "type": "string" },
        "name": { "type": "string" },
        "url": { "type": "string" },
        "deploymentId": { "type": ["string", "null"] },
        "updates": { "type": "string", "enum": ["auto", "approval-required"] },
        "telemetry": { "type": "string", "enum": ["auto", "approval-required", "off"] },
        "healthChecks": { "type": "string", "enum": ["on", "off"] }
      }
    },
    "runtime": { "type": "object" },
    "serviceAccounts": {
      "type": "object",
      "additionalProperties": {
        "type": "object",
        "properties": {
          "annotations": { "type": "object", "additionalProperties": { "type": "string" } },
          "labels": { "type": "object", "additionalProperties": { "type": "string" } }
        }
      }
    },
    "stackSettings": {
      "type": ["object", "null"],
      "properties": {
        "deploymentModel": { "type": "string", "enum": ["pull", "Pull"] },
        "updates": { "type": "string" },
        "telemetry": { "type": "string" },
        "heartbeats": { "type": "string" }
      },
      "additionalProperties": true
    },
    "infrastructure": { "type": ["object", "null"] },
    "services": { "type": "object" },
    "publicUrls": { "type": "object", "additionalProperties": { "type": "string" } },
    "persistentStorage": { "type": "object" },
    "ephemeralStorage": { "type": "object" }
  },
  "oneOf": [
    {
      "title": "manager-fetch path",
      "required": ["management"],
      "properties": {
        "management": {
          "required": ["token", "deploymentId"],
          "properties": {
            "deploymentId": { "type": "string", "minLength": 1 }
          }
        },
        "infrastructure": { "type": "null" }
      }
    },
    {
      "title": "external-bindings initialize path",
      "required": ["management", "infrastructure"],
      "properties": {
        "management": {
          "properties": {
            "deploymentId": { "type": "null" }
          }
        },
        "stackSettings": { "type": ["object", "null"] },
        "infrastructure": { "type": "object" }
      }
    }
  ]
}

=== templates/_helpers.tpl ===
{{- define "alien.name" -}}
{{- default .Chart.Name .Values.nameOverride | trunc 63 | trimSuffix "-" -}}
{{- end -}}

{{- define "alien.fullname" -}}
{{- if .Values.fullnameOverride -}}
{{- .Values.fullnameOverride | trunc 63 | trimSuffix "-" -}}
{{- else -}}
{{- printf "%s-%s" .Release.Name (include "alien.name" .) | trunc 63 | trimSuffix "-" -}}
{{- end -}}
{{- end -}}

{{- define "alien.labels" -}}
app.kubernetes.io/name: {{ include "alien.name" . }}
app.kubernetes.io/instance: {{ .Release.Name }}
app.kubernetes.io/managed-by: {{ .Release.Service }}
helm.sh/chart: {{ printf "%s-%s" .Chart.Name .Chart.Version | replace "+" "_" }}
{{- end -}}

{{- define "alien.managerServiceAccountName" -}}
{{ include "alien.fullname" . }}-manager
{{- end -}}

{{- define "alien.serviceAccountName" -}}
{{- printf "%s-%s" (include "alien.fullname" .root) .name | trunc 63 | trimSuffix "-" -}}
{{- end -}}

=== templates/serviceaccount.yaml ===
apiVersion: v1
kind: ServiceAccount
metadata:
  name: {{ include "alien.managerServiceAccountName" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
---
{{- range $name, $account := .Values.serviceAccounts }}
apiVersion: v1
kind: ServiceAccount
metadata:
  name: {{ include "alien.serviceAccountName" (dict "root" $ "name" $name) }}
  labels:
    {{- include "alien.labels" $ | nindent 4 }}
    {{- with $account.labels }}
    {{- toYaml . | nindent 4 }}
    {{- end }}
  {{- with $account.annotations }}
  annotations:
    {{- toYaml . | nindent 4 }}
  {{- end }}
---
{{- end }}

=== templates/role.yaml ===
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
rules:
  - apiGroups: [""]
    resources: ["configmaps", "secrets", "services", "pods", "pods/log", "persistentvolumeclaims"]
    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
  - apiGroups: ["apps"]
    resources: ["deployments", "statefulsets"]
    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
  - apiGroups: ["batch"]
    resources: ["jobs"]
    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
  - apiGroups: ["networking.k8s.io"]
    resources: ["ingresses", "networkpolicies"]
    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]

=== templates/rolebinding.yaml ===
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
subjects:
  - kind: ServiceAccount
    name: {{ include "alien.managerServiceAccountName" . }}
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: {{ include "alien.fullname" . }}

=== templates/secret.yaml ===
apiVersion: v1
kind: Secret
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
type: Opaque
stringData:
  sync-token: {{ .Values.management.token | quote }}
  {{- $existingSecret := lookup "v1" "Secret" .Release.Namespace (include "alien.fullname" .) }}
  {{- if .Values.runtime.encryptionKey }}
  encryption-key: {{ .Values.runtime.encryptionKey | quote }}
  {{- else if and $existingSecret (index $existingSecret.data "encryption-key") }}
  encryption-key: {{ index $existingSecret.data "encryption-key" | b64dec | quote }}
  {{- else }}
  encryption-key: {{ randAlphaNum 64 | sha256sum | quote }}
  {{- end }}
  {{- if .Values.infrastructure }}
  external-bindings.json: {{ toJson .Values.infrastructure | quote }}
  {{- end }}

=== templates/configmap.yaml ===
{{- $defaultStackSettings := dict "deploymentModel" "pull" "updates" .Values.management.updates "telemetry" .Values.management.telemetry "heartbeats" .Values.management.healthChecks -}}
{{- $publicUrls := dict -}}
{{- range $id, $service := .Values.services -}}
{{- if $service.host -}}
{{- $_ := set $publicUrls $id (printf "https://%s" $service.host) -}}
{{- end -}}
{{- end -}}
apiVersion: v1
kind: ConfigMap
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
data:
  stack.json: |-
{{ .Files.Get "files/stack.json" | indent 4 }}
  stack-settings.json: {{ toJson (default $defaultStackSettings .Values.stackSettings) | quote }}
  services.json: {{ toJson .Values.services | quote }}
  public-urls.json: {{ toJson (default $publicUrls .Values.publicUrls) | quote }}

=== templates/deployment.yaml ===
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
spec:
  replicas: {{ .Values.runtime.replicas }}
  selector:
    matchLabels:
      app.kubernetes.io/name: {{ include "alien.name" . }}
      app.kubernetes.io/instance: {{ .Release.Name }}
  template:
    metadata:
      labels:
        {{- include "alien.labels" . | nindent 8 }}
    spec:
      serviceAccountName: {{ include "alien.managerServiceAccountName" . }}
      containers:
        - name: agent
          image: "{{ .Values.runtime.image.repository }}:{{ .Values.runtime.image.tag }}"
          imagePullPolicy: {{ .Values.runtime.image.pullPolicy }}
          env:
            - name: PLATFORM
              value: kubernetes
            - name: SYNC_URL
              value: {{ .Values.management.url | quote }}
            - name: AGENT_NAME
              value: {{ .Values.management.name | quote }}
            {{- if .Values.management.deploymentId }}
            - name: DEPLOYMENT_ID
              value: {{ .Values.management.deploymentId | quote }}
            {{- end }}
            - name: KUBERNETES_NAMESPACE
              value: {{ .Release.Namespace | quote }}
            - name: SYNC_TOKEN_FILE
              value: /etc/alien/secrets/sync-token
            - name: AGENT_ENCRYPTION_KEY_FILE
              value: /etc/alien/secrets/encryption-key
            - name: STACK_SETTINGS_FILE
              value: /etc/alien/config/stack-settings.json
            - name: PUBLIC_URLS_FILE
              value: /etc/alien/config/public-urls.json
            {{- if .Values.infrastructure }}
            - name: EXTERNAL_BINDINGS_FILE
              value: /etc/alien/secrets/external-bindings.json
            {{- end }}
            - name: SYNC_INTERVAL
              value: "30"
            - name: OTLP_PORT
              value: {{ .Values.runtime.api.port | quote }}
          ports:
            - name: otlp
              containerPort: {{ .Values.runtime.api.port }}
          volumeMounts:
            - name: config
              mountPath: /etc/alien/config
              readOnly: true
            - name: secrets
              mountPath: /etc/alien/secrets
              readOnly: true
          resources:
            {{- toYaml .Values.runtime.resources | nindent 12 }}
      volumes:
        - name: config
          configMap:
            name: {{ include "alien.fullname" . }}
        - name: secrets
          secret:
            secretName: {{ include "alien.fullname" . }}
            defaultMode: 384

=== templates/service.yaml ===
{{- if .Values.runtime.api.enabled }}
apiVersion: v1
kind: Service
metadata:
  name: {{ include "alien.fullname" . }}
  labels:
    {{- include "alien.labels" . | nindent 4 }}
spec:
  type: {{ .Values.runtime.api.service.type }}
  selector:
    app.kubernetes.io/name: {{ include "alien.name" . }}
    app.kubernetes.io/instance: {{ .Release.Name }}
  ports:
    - name: http
      port: {{ .Values.runtime.api.port }}
      targetPort: http
{{- end }}

=== examples/eks.yaml ===
management:
  token: "dg_replace_me"
  name: "production"
  url: "https://manager.example.com"
  deploymentId: "dep_replace_me"
  updates: auto
  telemetry: auto
  healthChecks: "on"

serviceAccounts:
  {}

services:
  {}

=== examples/gke.yaml ===
management:
  token: "dg_replace_me"
  name: "production"
  url: "https://manager.example.com"
  deploymentId: "dep_replace_me"
  updates: auto
  telemetry: auto
  healthChecks: "on"

serviceAccounts:
  {}

services:
  {}

=== examples/aks.yaml ===
management:
  token: "dg_replace_me"
  name: "production"
  url: "https://manager.example.com"
  deploymentId: "dep_replace_me"
  updates: auto
  telemetry: auto
  healthChecks: "on"

serviceAccounts:
  {}

services:
  {}

=== examples/onprem.yaml ===
management:
  token: "dg_replace_me"
  name: "production"
  url: "https://manager.example.com"
  deploymentId: null
  updates: auto
  telemetry: auto
  healthChecks: "on"

stackSettings:
  deploymentModel: pull
  network: null
  domains: null
  updates: auto
  telemetry: auto
  heartbeats: "on"

serviceAccounts:
  {}

infrastructure:
  assets:
    type: storage
    service: s3
    bucketName: 'your-assets-bucket'
  jobs:
    type: queue
    service: sqs
    queueUrl: 'https://sqs.us-east-1.amazonaws.com/123456789012/jobs'
  metadata:
    type: kv
    service: redis
    connectionUrl: 'redis://metadata.internal:6379'
  secrets:
    type: vault
    service: kubernetes-secret
    namespace: 'default'
    vaultPrefix: 'secrets'
  registry:
    type: artifact_registry
    service: local
    registryUrl: 'registry.example.com'
    dataDir: null

services:
  {}

=== README.md ===
# data-chart

Install this chart into an existing Kubernetes cluster:

```bash
helm install data-chart ./data-chart --namespace production --create-namespace --values values.yaml
```

The generated `values.yaml` contains placeholders for management, service-account identity annotations, agent-local infrastructure bindings, and public service exposure. See `examples/<target>.yaml` for ready-to-use values matching EKS / GKE / AKS / on-prem.

=== files/stack.json ===
{
  "id": "data-chart",
  "resources": {
    "assets": {
      "config": {
        "id": "assets",
        "lifecycleRules": [],
        "publicRead": false,
        "type": "storage",
        "versioning": false
      },
      "lifecycle": "frozen",
      "dependencies": [],
      "remoteAccess": false
    },
    "jobs": {
      "config": {
        "id": "jobs",
        "type": "queue"
      },
      "lifecycle": "frozen",
      "dependencies": [],
      "remoteAccess": false
    },
    "metadata": {
      "config": {
        "id": "metadata",
        "type": "kv"
      },
      "lifecycle": "frozen",
      "dependencies": [],
      "remoteAccess": false
    },
    "secrets": {
      "config": {
        "id": "secrets",
        "type": "vault"
      },
      "lifecycle": "frozen",
      "dependencies": [],
      "remoteAccess": false
    },
    "registry": {
      "config": {
        "id": "registry",
        "type": "artifact-registry"
      },
      "lifecycle": "frozen",
      "dependencies": [],
      "remoteAccess": false
    }
  },
  "permissions": {
    "profiles": {},
    "management": "auto"
  }
}

=== files/stack-settings.json ===
{}
